k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bravo-ingress
  namespace: bravo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: bravo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bravo-api-service
                port:
                  number: 8000
